--- a/packages/hadron-type-checker/package.json
+++ b/packages/hadron-type-checker/package.json
@@ -31,10 +31,10 @@
     "lodash": "^4.17.21"
   },
   "devDependencies": {
+    "@mongodb-js/eslint-config-compass": "^1.1.7",
     "chai": "^4.2.0",
     "depcheck": "^1.4.1",
     "eslint": "^7.25.0",
-    "eslint-config-mongodb-js": "^5.0.3",
     "mocha": "^10.2.0"
   }
 }
