--- a/packages/mongodb-explain-compat/package.json
+++ b/packages/mongodb-explain-compat/package.json
@@ -47,13 +47,8 @@
   },
   "license": "SSPL",
   "devDependencies": {
+    "@mongodb-js/eslint-config-compass": "^1.1.7",
     "eslint": "^7.25.0",
-    "eslint-config-semistandard": "^15.0.1",
-    "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
     "gen-esm-wrapper": "^1.1.0",
     "mocha": "^10.2.0",
     "nyc": "^15.1.0"
