--- a/packages/compass-global-writes/package.json
+++ b/packages/compass-global-writes/package.json
@@ -53,10 +53,13 @@
     "@mongodb-js/compass-collection": "^4.41.0",
     "@mongodb-js/compass-components": "^1.29.4",
     "@mongodb-js/compass-connections": "^1.42.0",
+    "@mongodb-js/compass-field-store": "^9.17.0",
     "@mongodb-js/compass-logging": "^1.4.7",
     "@mongodb-js/compass-telemetry": "^1.1.7",
     "hadron-app-registry": "^9.2.6",
+    "mongodb-ns": "^2.4.2",
     "react": "^17.0.2",
+    "react-redux": "^8.1.3",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2"
   },
