--- a/packages/compass-global-writes/package.json
+++ b/packages/compass-global-writes/package.json
@@ -56,7 +56,10 @@
     "@mongodb-js/compass-logging": "^1.4.8",
     "@mongodb-js/compass-telemetry": "^1.2.0",
     "hadron-app-registry": "^9.2.7",
+    "@mongodb-js/compass-field-store": "^9.18.0",
+    "mongodb-ns": "^2.4.2",
     "react": "^17.0.2",
+    "react-redux": "^8.1.3",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2"
   },
