--- a/.evergreen/functions.yml
+++ b/.evergreen/functions.yml
@@ -202,11 +202,15 @@ functions:
 
           # Install dependencies
           bash ".evergreen/retry-with-backoff.sh" .evergreen/npm_ci.sh
+
           # Will fail if versions of direct dependencies listed in package-lock
           # are not matching versions defined in package.json file of any of the
           # workspace packages
-          # TODO: change this to npm ls --all when rest of the mismatched version issues are resolved
-          npm ls || echo "\nThe \`npm ls\` command failed with mismatched dependencies error. This usually means that the dependency versions listed in package.json are not matching dependencies resolved and recorded in package-lock.json. If you updated package.json files in your PR, inspect the error output and try to re-install offending dependncies to fix the package-lock file."
+          # This command is very noisy when running from root with --all, store
+          # the output in a file that will be uploaded with rest of the logs
+          LS_ALL_STDOUT_FILE="$(npm config get cache)/_logs/$(date -u +"%Y-%m-%dT%H_%M_%SZ")-npm-ls-all.log"
+          echo "Validating dependencies with \`npm ls --all\`..."
+          (npm ls --all > $LS_ALL_STDOUT_FILE && echo "No mismatched dependency versions") || echo "\nThe \`npm ls\` command failed with mismatched dependencies error. This usually means that the dependency versions listed in package.json are not matching dependencies resolved and recorded in package-lock.json. If you updated package.json files in your PR, inspect the error output and try to re-install offending dependncies to fix the package-lock file."
 
   bootstrap:
     - command: shell.exec
