--- a/package.json
+++ b/package.json
@@ -93,8 +93,9 @@
     "scripts"
   ],
   "overrides": {
-    "@types/enzyme": {
-      "@types/react": "^17.0.5"
-    }
+    "@types/react": "^17.0.83",
+    "@types/react-dom": "^17.0.25",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
