--- a/packages/compass-global-writes/package.json
+++ b/packages/compass-global-writes/package.json
@@ -62,7 +62,8 @@
     "react": "^17.0.2",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2"
+    "redux-thunk": "^2.4.2",
+    "@tanstack/table-core": "^8.14.0"
   },
   "devDependencies": {
     "@mongodb-js/eslint-config-compass": "^1.1.7",
