--- a/.evergreen/functions.yml
+++ b/.evergreen/functions.yml
@@ -673,6 +673,37 @@ functions:
           eval $(.evergreen/print-compass-env.sh)
           npm run --unsafe-perm --workspace compass-e2e-tests test-web
 
+  test-web-sandbox-atlas-cloud:
+    - command: shell.exec
+      # It can take a very long time for Atlas cluster to get deployed
+      timeout_secs: 2400
+      params:
+        working_dir: src
+        shell: bash
+        env:
+          <<: *compass-env
+          DEBUG: ${debug|}
+          BROWSER_NAME: chrome
+          MONGODB_VERSION: latest-enterprise
+          MONGODB_RUNNER_VERSION: latest-enterprise
+          E2E_TESTS_COMPASS_WEB_ATLAS_DB_USERNAME: ${e2e_tests_compass_web_atlas_db_username}
+          E2E_TESTS_COMPASS_WEB_ATLAS_USERNAME: ${e2e_tests_compass_web_atlas_username}
+          E2E_TESTS_COMPASS_WEB_ATLAS_PASSWORD: ${e2e_tests_compass_web_atlas_password}
+          MCLI_PUBLIC_API_KEY: ${e2e_tests_mcli_public_api_key}
+          MCLI_PRIVATE_API_KEY: ${e2e_tests_mcli_private_api_key}
+          MCLI_ORG_ID: ${e2e_tests_mcli_org_id}
+          MCLI_PROJECT_ID: ${e2e_tests_mcli_project_id}
+          MCLI_OPS_MANAGER_URL: ${e2e_tests_mcli_ops_manager_url}
+        script: |
+          set -e
+          # Load environment variables
+          eval $(.evergreen/print-compass-env.sh)
+          # Create Atlas cluster for test project
+          source .evergreen/create-atlas-cluster.sh
+          # Run the tests
+          echo "Starting e2e tests..."
+          npm run --unsafe-perm --workspace compass-e2e-tests test -- --test-compass-web-atlas-cloud
+
   test-connectivity:
     - command: shell.exec
       # Fail the task if it's idle for 10 mins
