--- a/packages/compass/package.json
+++ b/packages/compass/package.json
@@ -141,7 +141,7 @@
   "scripts": {
     "install": "node scripts/download-fonts.js && node scripts/download-csfle.js",
     "electron-rebuild": "electron-rebuild --only kerberos,keytar,interruptor,os-dns-native,win-export-certificate-and-key,macos-export-certificate-and-key --prebuild-tag-prefix not-real-prefix-to-force-rebuild",
-    "prestart": "npm run electron-rebuild",
+    "prestart": "npm run electron-rebuild && npm run compile --workspace=@mongodb-js/webpack-config-compass",
     "start": "HADRON_DISTRIBUTION=${HADRON_DISTRIBUTION:-compass} npm run webpack serve -- --mode development",
     "test-electron": "npm run test-main && npm run test-renderer",
     "test-main": "xvfb-maybe electron-mocha --no-sandbox \"./src/main/**/*.spec.*\"  \"./src/main/**/*.test.*\"",
