--- a/packages/compass-crud/package.json
+++ b/packages/compass-crud/package.json
@@ -94,6 +94,7 @@
     "hadron-type-checker": "^7.2.3",
     "jsondiffpatch": "^0.5.0",
     "lodash": "^4.17.21",
+    "mongodb": "^6.9.0",
     "mongodb-data-service": "^22.23.5",
     "mongodb-ns": "^2.4.2",
     "mongodb-query-parser": "^4.2.3",
