--- a/packages/compass-components/package.json
+++ b/packages/compass-components/package.json
@@ -76,6 +76,7 @@
     "@react-aria/interactions": "^3.9.1",
     "@react-aria/utils": "^3.13.1",
     "@react-aria/visually-hidden": "^3.3.1",
+    "@tanstack/table-core": "^8.14.0",
     "bson": "^6.8.0",
     "focus-trap-react": "^9.0.2",
     "hadron-document": "^8.6.4",
