--- a/packages/compass-e2e-tests/.depcheckrc
+++ b/packages/compass-e2e-tests/.depcheckrc
@@ -2,9 +2,12 @@ ignores:
   - '@mongodb-js/prettier-config-compass'
   - '@mongodb-js/tsconfig-compass'
   - '@wdio/types'
-  - 'mongodb-compass'
   - 'ps-list'
-  - 'mongodb-runner'
+# Avoiding recursive deps on monorepo workspaces
+  - 'mongodb-compass'
+  - '@mongodb-js/mocha-config-compass'
+  - 'compass-e2e-tests'
+  - '@mongodb-js/compass-web'
 # TODO(COMPASS-8312): depcheck doesn't count this dependency because it's a
 # types only import and the depcheck parser is resolving the @types/<name>
 # package as a dep instead
