--- a/.evergreen/buildvariants-and-tasks.yml
+++ b/.evergreen/buildvariants-and-tasks.yml
@@ -242,6 +242,11 @@ buildvariants:
       - name: e2e-coverage-1
       - name: e2e-coverage-2
       - name: e2e-coverage-3
+  - name: publish-e2e-tests
+    display_name: Publish E2E Tests Docker Image
+    run_on: ubuntu2004-large
+    tasks:
+      - name: publish-e2e-tests
   - name: csfle-tests
     display_name: CSFLE Tests
     run_on: ubuntu2004-large
@@ -1774,3 +1779,9 @@ tasks:
         vars:
           first_party_dependency_filenames: >-
             .sbom/first-party-deps-compass-package-ubuntu.json,.sbom/first-party-deps-compass-package-windows.json,.sbom/first-party-deps-compass-package-rhel.json,.sbom/first-party-deps-compass-package-macos-x64.json,.sbom/first-party-deps-compass-package-macos-arm.json,.sbom/first-party-deps-compass-isolated-package-ubuntu.json,.sbom/first-party-deps-compass-isolated-package-windows.json,.sbom/first-party-deps-compass-isolated-package-rhel.json,.sbom/first-party-deps-compass-isolated-package-macos-x64.json,.sbom/first-party-deps-compass-isolated-package-macos-arm.json,.sbom/first-party-deps-compass-readonly-package-ubuntu.json,.sbom/first-party-deps-compass-readonly-package-windows.json,.sbom/first-party-deps-compass-readonly-package-rhel.json,.sbom/first-party-deps-compass-readonly-package-macos-x64.json,.sbom/first-party-deps-compass-readonly-package-macos-arm.json
+  - name: publish-e2e-tests
+    tags:
+      - run-on-pr
+    commands:
+      - func: clone
+      - func: package-and-publish-e2e-docker-image
