chore(e2e): restructure e2e test helpers to better separate shared state and setup / teardown functions COMPASS-8361 (#6383)
* chore(e2e): restructure e2e test helpers to better separate shared state and setup / teardown functions

* chore: fix depcheck and var name

* chore: remove TEST_PACKAGED_APP env var usage

* chore: replset for test servers and better cleanup

* chore: eslint fixes

* chore(e2e): use DEFAULT_CONNECTIONS in connect form helpers

* chore: ts fix

* chore: update to non-esm version

* chore: fix glob

* chore: remove unused imports

* chore: more glob adjustments

* chore: uncomment retries

* chore: fix env var name

--- a/.evergreen/functions.yml
+++ b/.evergreen/functions.yml
@@ -664,7 +664,7 @@ functions:
           DEBUG: ${debug|}
           MONGODB_VERSION: ${mongodb_version|}
           MONGODB_RUNNER_VERSION: ${mongodb_version|}
-          BROWSER_NAME: ${browser_name}
+          COMPASS_WEB_BROWSER_NAME: ${browser_name}
           E2E_TEST_GROUPS: ${e2e_test_groups}
           E2E_TEST_GROUP: ${e2e_test_group}
         script: |
