--- a/packages/data-service/package.json
+++ b/packages/data-service/package.json
@@ -76,7 +76,7 @@
     "chai-as-promised": "^7.1.1",
     "depcheck": "^1.4.1",
     "eslint": "^7.25.0",
-    "kerberos": "2.1.0",
+    "kerberos": "^2.2.0",
     "mocha": "^10.2.0",
     "mongodb-log-writer": "^1.4.2",
     "nyc": "^15.1.0",
