--- a/packages/compass-components/package.json
+++ b/packages/compass-components/package.json
@@ -64,7 +64,7 @@
     "@leafygreen-ui/search-input": "^2.1.5",
     "@leafygreen-ui/segmented-control": "^8.2.10",
     "@leafygreen-ui/select": "^11.2.2",
-    "@leafygreen-ui/table": "^12.6.1",
+    "@leafygreen-ui/table": "^12.7.0",
     "@leafygreen-ui/tabs": "^11.1.13",
     "@leafygreen-ui/text-area": "^8.1.2",
     "@leafygreen-ui/text-input": "^12.1.26",
@@ -76,6 +76,7 @@
     "@react-aria/interactions": "^3.9.1",
     "@react-aria/utils": "^3.13.1",
     "@react-aria/visually-hidden": "^3.3.1",
+    "@tanstack/table-core": "^8.14.0",
     "bson": "^6.8.0",
     "focus-trap-react": "^9.0.2",
     "hadron-document": "^8.6.4",
