--- a/packages/compass/package.json
+++ b/packages/compass/package.json
@@ -140,7 +140,7 @@
   },
   "scripts": {
     "install": "node scripts/download-fonts.js && node scripts/download-csfle.js",
-    "electron-rebuild": "electron-rebuild --only kerberos,keytar,interruptor,os-dns-native,win-export-certificate-and-key,macos-export-certificate-and-key --prebuild-tag-prefix not-real-prefix-to-force-rebuild",
+    "electron-rebuild": "node scripts/electron-rebuild.js",
     "prestart": "npm run electron-rebuild && npm run compile --workspace=@mongodb-js/webpack-config-compass",
     "start": "HADRON_DISTRIBUTION=${HADRON_DISTRIBUTION:-compass} npm run webpack serve -- --mode development",
     "test-electron": "npm run test-main && npm run test-renderer",
@@ -240,6 +240,7 @@
     "chalk": "^4.1.2",
     "clean-stack": "^2.0.0",
     "compass-preferences-model": "^2.29.1",
+    "cross-spawn": "^7.0.3",
     "debug": "^4.3.4",
     "depcheck": "^1.4.1",
     "electron": "^30.5.1",
