--- a/.evergreen/functions.yml
+++ b/.evergreen/functions.yml
@@ -597,10 +597,9 @@ functions:
           DEBUG: ${debug|}
           MONGODB_VERSION: ${mongodb_version|}
           MONGODB_RUNNER_VERSION: ${mongodb_version|}
-          E2E_TEST_GROUPS: ${e2e_test_groups}
-          E2E_TEST_GROUP: ${e2e_test_group}
+          COMPASS_E2E_TEST_GROUPS: ${e2e_test_groups}
+          COMPASS_E2E_TEST_GROUP: ${e2e_test_group}
           ATLAS_LOCAL_VERSION: latest
-          HADRON_DISTRIBUTION: compass
         script: |
           set -e
           # Load environment variables
@@ -629,8 +628,8 @@ functions:
           DEBUG: ${debug|}
           MONGODB_VERSION: ${mongodb_version|}
           MONGODB_RUNNER_VERSION: ${mongodb_version|}
-          E2E_TEST_GROUPS: ${e2e_test_groups}
-          E2E_TEST_GROUP: ${e2e_test_group}
+          COMPASS_E2E_TEST_GROUPS: ${e2e_test_groups}
+          COMPASS_E2E_TEST_GROUP: ${e2e_test_group}
         script: |
           set -e
           # Load environment variables
@@ -664,14 +663,14 @@ functions:
           DEBUG: ${debug|}
           MONGODB_VERSION: ${mongodb_version|}
           MONGODB_RUNNER_VERSION: ${mongodb_version|}
-          COMPASS_WEB_BROWSER_NAME: ${browser_name}
-          E2E_TEST_GROUPS: ${e2e_test_groups}
-          E2E_TEST_GROUP: ${e2e_test_group}
+          COMPASS_E2E_BROWSER_NAME: ${browser_name}
+          COMPASS_E2E_TEST_GROUPS: ${e2e_test_groups}
+          COMPASS_E2E_TEST_GROUP: ${e2e_test_group}
         script: |
           set -e
           # Load environment variables
           eval $(.evergreen/print-compass-env.sh)
-          npm run --unsafe-perm --workspace compass-e2e-tests test-web
+          npm run --unsafe-perm --workspace compass-e2e-tests test-ci web
 
   test-connectivity:
     - command: shell.exec
