--- a/.evergreen/functions.yml
+++ b/.evergreen/functions.yml
@@ -672,6 +672,42 @@ functions:
           eval $(.evergreen/print-compass-env.sh)
           npm run --unsafe-perm --workspace compass-e2e-tests test-ci web
 
+    
+  test-web-sandbox-atlas-cloud:
+    - command: shell.exec
+      # It can take a very long time for Atlas cluster to get deployed
+      timeout_secs: 2400
+      params:
+        working_dir: src
+        shell: bash
+        env:
+          <<: *compass-env
+          DEBUG: ${debug|}
+          COMPASS_E2E_ATLAS_CLOUD_SANDBOX_CLOUD_CONFIG: 'qa'
+          COMPASS_E2E_ATLAS_CLOUD_SANDBOX_USERNAME: ${e2e_tests_compass_web_atlas_username}
+          COMPASS_E2E_ATLAS_CLOUD_SANDBOX_PASSWORD: ${e2e_tests_compass_web_atlas_password}
+          COMPASS_E2E_ATLAS_CLOUD_SANDBOX_DBUSER_USERNAME: ${e2e_tests_compass_web_atlas_db_username}
+          COMPASS_E2E_ATLAS_CLOUD_SANDBOX_DBUSER_PASSWORD: ${e2e_tests_compass_web_atlas_password}
+          MCLI_PUBLIC_API_KEY: ${e2e_tests_mcli_public_api_key}
+          MCLI_PRIVATE_API_KEY: ${e2e_tests_mcli_private_api_key}
+          MCLI_ORG_ID: ${e2e_tests_mcli_org_id}
+          MCLI_PROJECT_ID: ${e2e_tests_mcli_project_id}
+          MCLI_OPS_MANAGER_URL: ${e2e_tests_mcli_ops_manager_url}
+        script: |
+          set -e
+          # Load environment variables
+          eval $(.evergreen/print-compass-env.sh)
+          # Create Atlas cluster for test project
+          source .evergreen/start-atlas-cloud-cluster.sh
+          # Run the tests
+          echo "Starting e2e tests..."
+          # We're only running a special subset of tests as provisioning atlas
+          # clusters in CI is both pricey and flakey, so we want to limit the
+          # coverage to reduce those factors (at least for now)
+          npm run --unsafe-perm --workspace compass-e2e-tests test-ci -- -- web \
+            --test-atlas-cloud-sandbox \
+            --test-filter="atlas-cloud/**/*"
+
   test-connectivity:
     - command: shell.exec
       # Fail the task if it's idle for 10 mins
