--- a/packages/compass-generative-ai/package.json
+++ b/packages/compass-generative-ai/package.json
@@ -57,12 +57,16 @@
     "@mongodb-js/compass-connections": "^1.47.0",
     "@mongodb-js/compass-intercom": "^0.14.0",
     "@mongodb-js/compass-logging": "^1.4.10",
+    "@mongodb-js/compass-utils": "^0.6.14",
     "bson": "^6.8.0",
     "compass-preferences-model": "^2.30.0",
     "hadron-app-registry": "^9.2.7",
     "mongodb": "^6.9.0",
     "mongodb-schema": "^12.2.0",
-    "react": "^17.0.2"
+    "react": "^17.0.2",
+    "react-redux": "^8.1.3",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "@mongodb-js/connection-info": "^0.9.3",
