--- a/package.json
+++ b/package.json
@@ -95,5 +95,8 @@
     "@types/react-dom": "^17.0.25",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
+  },
+  "dependencies": {
+    "query-string": "^9.1.1"
   }
 }
