--- a/.evergreen/buildvariants-and-tasks.in.yml
+++ b/.evergreen/buildvariants-and-tasks.in.yml
@@ -245,12 +245,14 @@ buildvariants:
       - name: publish-dev-release-info
       - name: create_static_analysis_report
 
+  # TODO (COMPASS-8523): Re-enable this task
   # - name: connectivity-tests
   #   display_name: Connectivity Tests
   #   run_on: ubuntu2004-large
   #   tasks:
   #     - name: test-connectivity
 
+  # TODO (COMPASS-8523): Re-enable this task
   # - name: e2e-coverage
   #   display_name: E2E Coverage
   #   run_on: ubuntu2004-large
@@ -275,6 +277,7 @@ buildvariants:
     <% } %>
     <% } %>
 
+  # TODO (COMPASS-8523): Re-enable this task
   # - name: test-web-sandbox-atlas-cloud
   #   display_name: Test Web Sandbox (w/ Atlas Cloud login)
   #   run_on: ubuntu2004-large
