remove comboxbox and install LG one

--- a/packages/compass-components/package.json
+++ b/packages/compass-components/package.json
@@ -40,6 +40,7 @@
     "@leafygreen-ui/card": "^11.0.0",
     "@leafygreen-ui/checkbox": "^13.1.2",
     "@leafygreen-ui/code": "^14.4.0",
+    "@leafygreen-ui/combobox": "^10.0.0",
     "@leafygreen-ui/confirmation-modal": "^5.2.1",
     "@leafygreen-ui/emotion": "^4.0.8",
     "@leafygreen-ui/guide-cue": "^5.1.0",
@@ -47,9 +48,7 @@
     "@leafygreen-ui/icon": "^12.8.0",
     "@leafygreen-ui/icon-button": "^15.0.23",
     "@leafygreen-ui/info-sprinkle": "^2.1.0",
-    "@leafygreen-ui/inline-definition": "^6.0.15",
     "@leafygreen-ui/leafygreen-provider": "^3.2.0",
-    "@leafygreen-ui/lib": "^13.8.2",
     "@leafygreen-ui/logo": "^9.2.0",
     "@leafygreen-ui/marketing-modal": "^4.2.3",
     "@leafygreen-ui/menu": "^26.0.0",
@@ -84,7 +83,6 @@
     "is-electron-renderer": "^2.0.1",
     "lodash": "^4.17.21",
     "polished": "^4.2.2",
-    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-hotkeys-hook": "^4.3.7",
     "react-intersection-observer": "^8.34.0",
