--- a/.evergreen/buildvariants-and-tasks.in.yml
+++ b/.evergreen/buildvariants-and-tasks.in.yml
@@ -517,7 +517,7 @@ tasks:
       - assigned_to_jira_team_compass_compass
       - foliage_check_task_only
     # These tests are expensive (literally) and shouldn't be running on PRs
-    # patchable: false
+    patchable: false
     commands:
       - func: prepare
       - func: install
