chore(ci): don't run cron tasks on commits generated by cron-tasks

--- a/.github/workflows/authors-and-third-party-notices.yaml
+++ b/.github/workflows/authors-and-third-party-notices.yaml
@@ -12,6 +12,7 @@ jobs:
   update_generated_files:
     name: Update automatically generated files
     runs-on: ubuntu-latest
+    if: "${{ github.event_name != 'push' || github.event.head_commit.message != 'chore: update AUTHORS, THIRD-PARTY-NOTICES, Security Test Summary' }}"
     env:
       HADRON_DISTRIBUTION: compass
     steps:
@@ -68,5 +69,5 @@ jobs:
 
       - name: Commit and push
         run: |
-          git commit --no-allow-empty -m "chore: update AUTHORS, THIRD-PARTY-NOTICES, Security Test Summary [skip actions]" || true
+          git commit --no-allow-empty -m "chore: update AUTHORS, THIRD-PARTY-NOTICES, Security Test Summary" || true
           git push
