--- a/.evergreen/functions.yml
+++ b/.evergreen/functions.yml
@@ -651,6 +651,31 @@ functions:
 
           npm run --unsafe-perm --workspace compass-e2e-tests test-packaged-ci
 
+  smoketest-packaged-app:
+    - command: shell.exec
+      # Fail the task if it's idle for 10 mins
+      timeout_secs: 600
+      params:
+        working_dir: src
+        shell: bash
+        env:
+          <<: *compass-env
+          DEBUG: ${debug|}
+          MONGODB_VERSION: ${mongodb_version|}
+          MONGODB_RUNNER_VERSION: ${mongodb_version|}
+          HADRON_DISTRIBUTION: ${compass_distribution}
+        script: |
+          set -e
+          # Load environment variables
+          eval $(.evergreen/print-compass-env.sh)
+
+          if [[ "$IS_OSX" == "true" ]]; then
+            echo "Disabling clipboard usage in e2e tests (TODO: https://jira.mongodb.org/browse/BUILD-14780)"
+            export COMPASS_E2E_DISABLE_CLIPBOARD_USAGE="true"
+          fi
+
+          npm run --workspace compass-e2e-tests smoketest
+
   test-web-sandbox:
     - command: shell.exec
       # Fail the task if it's idle for 10 mins
