--- a/.evergreen/buildvariants-and-tasks.in.yml
+++ b/.evergreen/buildvariants-and-tasks.in.yml
@@ -60,6 +60,40 @@ const PACKAGE_BUILD_VARIANTS = [
   }
 ];
 
+const SMOKETEST_BUILD_VARIANTS = [
+  {
+    name: 'smoketest-ubuntu',
+    display_name: 'Smoketest Ubuntu',
+    run_on: 'ubuntu2004-large',
+    depends_on: 'package-ubuntu',
+  },
+  
+//  {
+//    name: 'smoketest-windows',
+//    display_name: 'Smoketest Windows',
+//    run_on: 'windows-vsCurrent-large',
+//    depends_on: 'package-windows',
+//  },
+//  {
+//    name: 'smoketest-rhel',
+//    display_name: 'Smoketest RHEL',
+//    run_on: 'rhel80-large',
+//    depends_on: 'package-rhel',
+//  },
+//  {
+//    name: 'smoketest-macos-x64',
+//    display_name: 'Smoketest MacOS Intel',
+//    run_on: 'macos-14',
+//    depends_on: 'package-macos-x64',
+//  },
+//  {
+//    name: 'smoketest-macos-arm',
+//    display_name: 'Smoketest MacOS Arm64',
+//    run_on: 'macos-14-arm64',
+//    depends_on: 'package-macos-arm',
+//  }
+];
+
 const TEST_PACKAGED_APP_BUILD_VARIANTS = [
   {
     name: 'test-packaged-app-ubuntu',
@@ -178,6 +212,19 @@ buildvariants:
     <% for (const distribution of COMPASS_DISTRIBUTIONS) { %>
     - name: package-<%= distribution %>
     <% } %>
+<% } %>
+
+<% for (const buildVariant of SMOKETEST_BUILD_VARIANTS) { %>
+<% for (const distribution of ['compass']) { %>
+  - name: <%= buildVariant.name %>-<%= distribution %>
+    display_name: <%= buildVariant.display_name %> (<%= distribution %>)
+    run_on: <%= buildVariant.run_on %>
+    depends_on:
+      - name: package-<%= distribution %>
+        variant: <%= buildVariant.depends_on %>
+    tasks:
+    - name: smoketest-<%= distribution %>
+<% } %>
 <% } %>
 
   - name: test-eol-servers
@@ -424,6 +471,22 @@ tasks:
       - func: save-all-artifacts
         vars:
           compass_distribution: <%= distribution %>
+  <% } %>
+
+<% for (const distribution of ['compass']) { %>
+  - name: smoketest-<%= distribution %>
+    tags: ['required-for-publish', 'run-on-pr']
+    commands:
+      - func: prepare
+      - func: install
+      - func: bootstrap
+        vars:
+          scope: 'compass-e2e-tests'
+      - func: smoketest-packaged-app
+        vars:
+          mongodb_version: latest-enterprise
+          compass_distribution: <%= distribution %>
+          debug: 'compass-e2e-tests*,electron*,hadron*,mongo*'
 <% } %>
 
 <% for (const serverVersion of SERVER_VERSIONS) { %>
