--- a/packages/mocked-compass/.gitignore
+++ b/packages/mocked-compass/.gitignore
@@ -21,4 +21,4 @@ src/app/fonts/akzid*
 src/app/fonts/Euclid*
 src/app/fonts/MongoDB*
 .compile-cache-mappings.json
-THIRD-PARTY-NOTICES.md
+macnotary
