--- a/.github/workflows/update-electron.yaml
+++ b/.github/workflows/update-electron.yaml
@@ -22,6 +22,7 @@ jobs:
         with:
           # don't checkout a detatched HEAD
           ref: ${{ github.head_ref }}
+          token: ${{ steps.app-token.outputs.token }}
 
       - uses: actions/setup-node@v4
         with:
@@ -48,3 +49,4 @@ jobs:
           labels: no-title-validation
           body: |
             - Update electron
+          author: "${{ steps.app-token.outputs.app-slug }}[bot]"
