start compass-mongodb-com as a docker image before we run the smoketests

--- a/.evergreen/buildvariants-and-tasks.yml
+++ b/.evergreen/buildvariants-and-tasks.yml
@@ -498,7 +498,7 @@ tasks:
       - func: bootstrap
         vars:
           scope: compass-e2e-tests
-      - func: get-compass-mongodb-com
+      - func: spawn-compass-mongodb-com
       - func: smoketest-packaged-app
         vars:
           mongodb_version: latest-enterprise
